# 4610C_MotionPlanning

./: AutoPlanner_Doc.MD  CMakeLists.txt  README.md
xCalculations/: PathGenerator.cpp  PathGenerator.h  TrajectoryGenerator.cpp  TrajectoryGenerator.h
xStructures/: Path.cpp  Path.h  Spline.cpp  Spline.h  Trajectory.cpp  Trajectory.h  WaypointSequence.cpp  WaypointSequence.h
